# MedLedger

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  PHASE1_CHECKLIST.md  QUICK_REFERENCE.md  README.md  SETUP_SUMMARY.md  USER_MANUAL.md  pyproject.toml  requirements-ml.txt  verify_setup.py
backend/: .env.example  README.md  jest.config.js  package.json
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/coverage/lcov-report/: index.html
backend/src/: server.js
backend/src/config/: fabric.config.js  ipfs.config.js
backend/tests/: api.test.js
chaincode/ehr/: Dockerfile  README.md  audit.go  connection.json  consent.go  ehr-ccaas.tgz  ehr.go  ehr_test.go  fl_model.go  go.mod  go.sum  governance.go  incentives.go  main.go  metadata.json  rbac.go
ehr_system/: __init__.py
ehr_system/crypto/: __init__.py  encryption.py
ehr_system/ipfs/: __init__.py  client.py
fabric-network/: DOCKER_UPDATE_SUMMARY.md  NETWORK_SUMMARY.md  README.md  SETUP_GUIDE.md  configtx.yaml  connection-profile.json  crypto-config.yaml  docker-compose-ca.yaml  docker-compose-couch.yaml  docker-compose.yaml  network.ps1  network.sh
fabric-network/scripts/: createChannel.sh  deployCC.sh  enrollUsers.ps1  enrollUsers.sh  utils.sh
fl_service/: ARCHITECTURE.md  README.md  client.py  model.py  server.py  setup_node.ps1  setup_node.sh  utils.py
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
ipfs/: README.md  docker-compose-ipfs.yaml  ipfs.ps1  ipfs.sh
tests/: test_ipfs.py
(+41 files in other folders)
