[tool.poetry]
name = "blockchain-ehr-system"
version = "0.1.0"
description = "Patient-centric Secure Electronic Health Record (EHR) sharing system using Hyperledger Fabric blockchain"
authors = ["BlockChain EHR Team"]
readme = "README.md"
packages = [{include = "ehr_system"}]

[tool.poetry.dependencies]
python = "^3.9"
# Cryptography
cryptography = "^41.0.7"
pycryptodome = "^3.19.0"

# IPFS Integration  
ipfshttpclient = "^0.8.0a2"

# API Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-multipart = "^0.0.6"

# Database
sqlalchemy = "^2.0.23"

# Utilities
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
requests = "^2.31.0"
aiohttp = "^3.9.1"

# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

# Development
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
